--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Welcome to My Website</h1>
   <p>Click the link below to view the React app:</p>
-  <a href="/e-shop/">Go to React App</a>
+  <a href="./shop">Go to React App</a>
 </body>
 </html>
